# empyricalRMT

./: .flake8  .gitignore  API_outline.md  Makefile  README.md  RELEASE.py  mypy.ini  notes.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
empyricalRMT/: .flake8  _constants.py  _eigvals.py  _types.py  _validate.py  brody.py  clean_test.py  compare.py  construct.py  correlater.py  detrend.py  eigenvalues.py  ensemble.py  exponentials.py  group_eigtest.py  group_levelvariance.py  group_rigidity_test.py  group_spacing_test.py  group_test.py  plot.py  pytest.ini  smoother.py  testing.py  trim.py  unfold.py  utils.py
empyricalRMT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
empyricalRMT/__pycache__/: main.getEigs-45.py36m.1.nbc  main.getEigs-45.py36m.nbi  main.getEigs-47.py36m.1.nbc  main.getEigs-47.py36m.nbi  main.getEigs-49.py36m.1.nbc  main.getEigs-49.py36m.nbi  main.getEigs-50.py36m.1.nbc  main.getEigs-50.py36m.nbi  main.stepFunctionG-77.py36m.1.nbc  main.stepFunctionG-77.py36m.nbi  main.stepFunctionG-78.py36m.1.nbc  main.stepFunctionG-78.py36m.nbi  main.stepFunctionG-79.py36m.1.nbc  main.stepFunctionG-79.py36m.nbi  main.stepFunctionG-80.py36m.1.nbc  main.stepFunctionG-80.py36m.nbi  main.stepFunctionG-81.py36m.1.nbc  utils.slope-124.py36m.nbi  (+11 more)
examples/: basic.py
readme/: make_figures.py
tests/: test_brody.py  test_compare.py  test_construct.py  test_correctness.py  test_levelvar.py  test_math.py  test_nnsd.py  test_plot.py  test_rigidity.py  test_smoother.py  test_time_series.py  test_trim.py  test_unfold.py
(+142 files in other folders)
