[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = false
line_length = 100
atomic = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LOCALFOLDER", "FIRSTPARTY"]
known_local_folder = ["empyricalRMT", "src", "test", "tests"]

[tool.poetry]
name = "empyricalrmt"
version = "1.1.1"
description = "Eigenvalue unfolding and spectral observable computation"
authors = ["Derek M Berger <dmberger.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "empyricalRMT" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
EMD-signal = "^1.2.3"
matplotlib = "^3.5.3"
numba = "^0.56.2"
numpy = "^1.23.3"
pandas = "^1.4.4"
pyod = "^1.0.4"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
seaborn = "^0.12.0"
statsmodels = "^0.13.2"
tqdm = "^4.64.1"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
